[package]
name = "openapi_to_rust"
version = "0.1.0"
authors = ["Cameron Taggart <cameron.taggart@gmail.com>"]
edition = "2018"

[dependencies]
openapi = { git = "https://github.com/ctaggart/openapi", branch = "msrest" }
# openapi = { path = "../openapi" }
quote = "*"
rustfmt-nightly = { git = "https://github.com/rust-lang/rustfmt", rev = "f7ba2dbcf2ce9dd086c06b6b7e89b399fdd25374" }
proc-macro2 = { version = "*", default-features = false }
serde_ignored = "*"
serde_json = "*"
serde_yaml = "*"
heck = "*"
regex = "*"