[package]
name = "autorust_codegen"
version = "0.1.0"
authors = ["Cameron Taggart <cameron.taggart@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
autorust_openapi = { rev = "0e898b8c9d8185c9f9a49e056ce42e5669424f6b", git = "https://github.com/rylev/autorust_openapi" }
# autorust_openapi = { path = "../../autorust_openapi" }
quote = "*"
proc-macro2 = { version = "*", default-features = false }
serde_json = "*"
serde_yaml = "*"
heck = "*"
regex = "*"
indexmap = { version = "*", features = ["serde-1"] }
path_abs = "*"
comrak = "0.8"
serde = "1.0"
snafu = "0.6"
http = "0.2"
lazy_static = "1.4"
syn = { version = "1.0", features = ["parsing"] }
